<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/page_margin_horizontal">

        <!-- Mobile Number -->
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proza_libre_semi_bold"
            android:includeFontPadding="false"
            android:text="@string/label_mobile_number"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_size_13" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etMobile"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/bg_input_field"
            android:fontFamily="@font/proza_libre_medium"
            android:hint="@string/hint_mobile"
            android:includeFontPadding="false"
            android:inputType="phone"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/margin_small"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/colorTextHint"
            android:textSize="@dimen/text_size_13" />

        <!-- Email Address -->
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:fontFamily="@font/proza_libre_semi_bold"
            android:includeFontPadding="false"
            android:text="@string/labelEmailAddress"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_size_13" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/bg_input_field"
            android:fontFamily="@font/proza_libre_medium"
            android:hint="@string/hintEmail"
            android:includeFontPadding="false"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/margin_small"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/colorTextHint"
            android:textSize="@dimen/text_size_13" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
