<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="onClickListener"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_bg"
        android:clickable="true"
        android:clipToPadding="false"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:behavior_skipCollapsed="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <!-- Horizontal margin anchor -->
        <View
            android:id="@+id/dummyView"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="@dimen/page_margin_horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Amount -->
        <LinearLayout
            android:id="@+id/llAmount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_extra_large"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/dummyView"
            app:layout_constraintStart_toStartOf="@id/dummyView"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proza_libre_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/labelAmount"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_13" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/margin_small"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/primary"
                app:strokeWidth="1dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etAmount"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:fontFamily="@font/proza_libre_regular"
                    android:hint="@string/hintEnterAmount"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal"
                    android:paddingHorizontal="@dimen/margin_large"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="?attr/colorTextHint"
                    android:textSize="@dimen/text_size_13" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <!-- Payment Mode -->
        <LinearLayout
            android:id="@+id/llPaymentMode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/dummyView"
            app:layout_constraintStart_toStartOf="@id/dummyView"
            app:layout_constraintTop_toBottomOf="@id/llAmount">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proza_libre_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/labelPaymentMode"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_13" />

            <LinearLayout
                android:id="@+id/llPaymentModeToggle"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginTop="@dimen/margin_small"
                android:background="@drawable/bg_toggle_container"
                android:clipToOutline="true"
                android:orientation="horizontal"
                android:outlineProvider="background">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTabImps"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_toggle_selected"
                    android:ellipsize="end"
                    android:fontFamily="@font/proza_libre_semi_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:onClickListener="@{onClickListener}"
                    android:text="@string/labelImps"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_13" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTabNeft"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_toggle_unselected"
                    android:ellipsize="end"
                    android:fontFamily="@font/proza_libre_semi_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:onClickListener="@{onClickListener}"
                    android:text="@string/labelNeft"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_size_13" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvTabRtgs"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/bg_toggle_unselected"
                    android:ellipsize="end"
                    android:fontFamily="@font/proza_libre_semi_bold"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:maxLines="1"
                    android:onClickListener="@{onClickListener}"
                    android:text="@string/labelRtgs"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_size_13" />

            </LinearLayout>

        </LinearLayout>

        <!-- Narration -->
        <LinearLayout
            android:id="@+id/llNarration"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/dummyView"
            app:layout_constraintStart_toStartOf="@id/dummyView"
            app:layout_constraintTop_toBottomOf="@id/llPaymentMode">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/proza_libre_semi_bold"
                android:includeFontPadding="false"
                android:text="@string/labelNarration"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_13" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:layout_marginTop="@dimen/margin_small"
                app:cardBackgroundColor="@android:color/transparent"
                app:cardCornerRadius="10dp"
                app:cardElevation="0dp"
                app:strokeColor="@color/primary"
                app:strokeWidth="1dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etNarration"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@null"
                    android:fontFamily="@font/proza_libre_regular"
                    android:hint="@string/hintNarration"
                    android:imeOptions="actionDone"
                    android:paddingHorizontal="@dimen/margin_large"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textColorHint="?attr/colorTextHint"
                    android:textSize="@dimen/text_size_13" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

        <!-- Proceed Withdraw button -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/btnProceedWithdraw"
            android:layout_width="0dp"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="@dimen/margin_large"
            android:onClickListener="@{onClickListener}"
            app:cardBackgroundColor="@color/primary"
            app:cardCornerRadius="@dimen/card_corner_radius"
            app:cardElevation="0dp"
            app:layout_constraintEnd_toEndOf="@id/dummyView"
            app:layout_constraintStart_toStartOf="@id/dummyView"
            app:layout_constraintTop_toBottomOf="@id/llNarration"
            app:strokeWidth="0dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/proza_libre_bold"
                    android:includeFontPadding="false"
                    android:text="@string/btnProceedWithdraw"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_size_14" />

            </LinearLayout>

        </com.google.android.material.card.MaterialCardView>

        <!-- Secure footer -->
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSecureFooter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="30dp"
            android:fontFamily="@font/proza_libre_regular"
            android:text="@string/msgSecurePaymentPaytouch"
            android:textColor="@color/sub_text_color"
            android:textSize="@dimen/text_size_11"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnProceedWithdraw" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
