<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/page_margin_horizontal">

        <!-- PAN Number -->
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/proza_libre_semi_bold"
            android:includeFontPadding="false"
            android:text="@string/labelPanNumber"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_size_13" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etPan"
            android:layout_width="match_parent"
            android:layout_height="@dimen/input_height"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/bg_input_field"
            android:fontFamily="@font/proza_libre_medium"
            android:hint="@string/hintPanCardNumber"
            android:includeFontPadding="false"
            android:inputType="textCapCharacters|textNoSuggestions"
            android:maxLength="10"
            android:maxLines="1"
            android:paddingHorizontal="@dimen/margin_small"
            android:singleLine="true"
            android:textColor="@color/black"
            android:textColorHint="?attr/colorTextHint"
            android:textSize="@dimen/text_size_13" />

        <!-- Front Side -->
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:fontFamily="@font/proza_libre_semi_bold"
            android:includeFontPadding="false"
            android:text="@string/labelFrontSide"
            android:textColor="@color/primary"
            android:textSize="@dimen/text_size_13" />

        <FrameLayout
            android:id="@+id/flPanFront"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/bg_upload_area"
            android:clickable="true"
            android:focusable="true">

            <LinearLayout
                android:id="@+id/llUploadPan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:src="@drawable/ic_upload"
                    android:tint="@color/primary" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_extra_small"
                    android:fontFamily="@font/proza_libre_medium"
                    android:includeFontPadding="false"
                    android:text="@string/labelPanUpload"
                    android:textColor="@color/primary"
                    android:textSize="@dimen/text_size_12" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_tiny"
                    android:fontFamily="@font/proza_libre_medium"
                    android:includeFontPadding="false"
                    android:text="@string/msgUploadHint"
                    android:textColor="@color/hint_color"
                    android:textSize="@dimen/text_size_10" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivPreviewPan"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/llEditDeletePan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|end"
                android:layout_margin="@dimen/margin_extra_small"
                android:orientation="horizontal"
                android:visibility="gone">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivEditPan"
                    android:layout_width="@dimen/upload_edit_size"
                    android:layout_height="@dimen/upload_edit_size"
                    android:background="@drawable/bg_transaction_icon"
                    android:padding="@dimen/margin_extra_small"
                    android:src="@drawable/ic_edit_placeholder"
                    android:tint="@color/form_wizard_success" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivDeletePan"
                    android:layout_width="@dimen/upload_edit_size"
                    android:layout_height="@dimen/upload_edit_size"
                    android:layout_marginStart="@dimen/margin_extra_small"
                    android:background="@drawable/bg_transaction_icon"
                    android:padding="@dimen/margin_extra_small"
                    android:src="@drawable/ic_cross"
                    android:tint="@color/form_wizard_reject" />

            </LinearLayout>
        </FrameLayout>

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
